--- a/src/app/styles/footer.css
+++ b/src/app/styles/footer.css
@@ -16,15 +16,9 @@
   text-decoration: none;
 }
 
-#footer .fa {
-  margin-right: 25px;
-  position: relative;
-  top: 4px;
-}
-
 #footer .icon {
   font-size: 32px;
-  margin-right: 25px;
+  margin-right: 18px;
   position: relative;
   top: 3px;
 }
