--- a/src/app/styles/media-queries.css
+++ b/src/app/styles/media-queries.css
@@ -1,24 +1,24 @@
 @media (max-width: 991px) {
   body {
-    font-size: 14px;
+    font-size: 13px;
   }
   h3 {
-    font-size: 24px;
+    font-size: 22px;
   }
   h4 {
-    font-size: 18px;
+    font-size: 16px;
   }
   .btn {
-    font-size: 14px;
+    font-size: 12px;
   }
   .square-bracket {
-    font-size: 20px;
+    font-size: 16px;
   }
   #about-me {
     padding-top: 20px !important;
   }
   #about-me .text-scramble {
-    font-size: 24px;
+    font-size: 18px;
   }
   #about-me .parallax-skill-svg {
     display: none;
@@ -28,10 +28,7 @@
     top: 1760px;
   }
   #skills .star-text {
-    font-size: 12px;
-  }
-  #projects .card-columns {
-    /* column-count: 3; */
+    font-size: 9px;
   }
   #contact-form input, #contact-form textarea {
     font-size: 14px;
